fixed popup on mobile

--- a/client/src/components/BoardView/Task/Task.module.scss
+++ b/client/src/components/BoardView/Task/Task.module.scss
@@ -188,6 +188,8 @@
 }
 
 .lastTaskPopup {
-  bottom: 90px;
-  right: 40px;
+  @include mq(sm) {
+    bottom: 90px;
+    right: 40px;
+  }
 }
